QoL improvements on mobile. Bug fixes.

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -102,6 +102,7 @@ time, mark, audio, video {
 @media screen and (max-width: 768px) {
   .App {
     display: block;
+    -webkit-overflow-scrolling: touch;
 
     .sidebar {
       display: none;
@@ -120,12 +121,17 @@ time, mark, audio, video {
     .main {
       display: block;
       .message-bar {
-        display: none;
+        //display: none;
       }
     }
 
     .main.thread-is-open {
       header {display: none;}
+      .thread-content {
+        p.title {
+          max-width: 325px;
+        }
+      }
     }
 
     .main.thread-is-closed {
@@ -163,6 +169,28 @@ time, mark, audio, video {
 
     .main-content.threads-close {
       display: block;
+      .message-block {
+        div.mediaDiv {
+          min-width: 275px;
+          max-width: 275px;
+          video {max-width: 300px; max-height: 300px; margin-top: 1rem;}
+          img {max-width: 300px; max-height: 300px; margin-top: 1rem;}
+          .responsiveIframe {
+            margin-top: 1rem;
+            position: relative;
+            overflow: hidden;
+            padding-top: 56.25%;
+            .iframe-video {
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+              border: 0;
+            }
+          }
+        }
+      }
     }
 
     .main-content.threads-open {
