--- a/src/styles/_message.scss
+++ b/src/styles/_message.scss
@@ -5,7 +5,7 @@
   display: flex; align-items: flex-start;
   margin: 0 0 0.5rem;
   padding: 0.5rem 1.5rem;
-  cursor: auto;
+  cursor: pointer;
   .headshot img {max-width: 35px; margin-right: 15px; margin-top: 3px; border-radius: 4px;}
   .message {
     display: flex;
@@ -27,7 +27,6 @@
       }
     }
     p.title {
-      cursor: pointer;
       margin: 0;
       font-size: 0.9rem;
       @include customize(theme) {
