--- a/src/styles/_thread.scss
+++ b/src/styles/_thread.scss
@@ -56,6 +56,7 @@
     }
   }
   .message-block {
+    overflow: hidden;
     p.title {cursor: auto;}
     cursor: auto;
     .thread-button button {display: none;}
